# AIpp-opener

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTAINER_TESTING.md  CONTRIBUTING.md  Containerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE5_SUMMARY.md  PLUGIN_DEVELOPMENT.md  PROJECT.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  shell.nix  snapcraft.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
.qwen/: PROJECT_SUMMARY.md
aipp_opener/: __init__.py  __main__.py  ai_chat.py  aliases.py  async_ai_providers.py  async_cache.py  async_detector_base.py  async_executor.py  async_history.py  async_web_search.py  cache.py  categories.py  cli.py  config.py  context_aware_suggester.py  executor.py  groups.py  gui.py  history.py  icons.py  keyboard.py  logger_config.py  plugins.py  profiler.py  setup_wizard.py  tray.py  voice.py  wayland_shortcuts.py  web_search.py
aipp_opener/ai/: __init__.py  base.py  gemini.py  nlp.py  ollama.py  openai.py  openrouter.py
aipp_opener/detectors/: __init__.py  arch.py  base.py  debian.py  fedora.py  nixos.py
completions/: aipp-opener.bash  aipp-opener.fish  aipp-opener.zsh
flatpak/: README.md  io.github.CertifiedSlop.AIppOpener.desktop  io.github.CertifiedSlop.AIppOpener.json  io.github.CertifiedSlop.AIppOpener.metainfo.xml
plugins/: browser_tabs.py  custom_commands.py  docker_detector.py  notification_modifier.py  recent_files.py
systemd/: README.md  aipp-opener-cleanup.service  aipp-opener-cleanup.timer  aipp-opener.service  install.sh
tests/: __init__.py  test_additional_modules.py  test_ai_extended.py  test_ai_modules.py  test_aipp_opener.py  test_async_ai_providers.py  test_async_detector_base.py  test_async_executor.py  test_async_executor_extended.py  test_cli.py  test_core_modules.py  test_detectors.py  test_detectors_extended.py  test_executor.py  test_extended_modules.py  test_icons.py  test_integration.py  test_new_modules.py  test_phase5_async.py  test_plugins.py  test_setup_wizard.py  test_ui_modules.py  test_voice.py
