[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipp-opener"
version = "0.5.0"
description = "AI-powered application launcher for Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AIpp Opener Team", email = "aipp@example.com"}
]
maintainers = [
    {name = "AIpp Opener Team", email = "aipp@example.com"}
]
keywords = [
    "ai",
    "launcher",
    "application",
    "nlp",
    "linux",
    "nixos",
    "debian",
    "voice",
    "gui"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
]
async = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
]
voice = [
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.13",
]
gui = [
    "pillow>=10.0.0",
    "pystray>=0.19.5",
]
keyboard = [
    "pynput>=1.7.6",
    "python-xlib>=0.33",
]
notifications = [
    "notify-py>=0.3.42",
]
all = [
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.13",
    "pillow>=10.0.0",
    "pystray>=0.19.5",
    "pynput>=1.7.6",
    "python-xlib>=0.33",
    "notify-py>=0.3.42",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/aipp-opener/aipp-opener"
Documentation = "https://github.com/aipp-opener/aipp-opener#readme"
Repository = "https://github.com/aipp-opener/aipp-opener.git"
Issues = "https://github.com/aipp-opener/aipp-opener/issues"
Changelog = "https://github.com/aipp-opener/aipp-opener/blob/main/CHANGELOG.md"

[project.scripts]
aipp-opener = "aipp_opener.cli:main"
aipp = "aipp_opener.cli:main"

[project.gui-scripts]
aipp-gui = "aipp_opener.gui:main"
aipp-tray = "aipp_opener.tray:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aipp_opener*"]

[tool.setuptools.package-data]
aipp_opener = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=aipp_opener --cov-report=term-missing"
asyncio_mode = "auto"
